--- a/covid19/index.html
+++ b/covid19/index.html
@@ -14,7 +14,7 @@
             <img id="leftarrow" src="arrow.svg" alt="">
         </button>
         <div id="div4" class="container">
-            <img class="mySlides" src="Pandemic index 2020.05.10.png" style="width:1161px">
+            <img class="mySlides" src="Pandemic index 2020.05.11.png" style="width:1161px">
             <div class="content">
               <h3>2020.05.10.</h3>
               <!--<p>Folyó naplementekor</p>-->
@@ -348,6 +348,13 @@
                 <h3>2020.05.09.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
+        </div>
+        <div id="div4" class="container">
+          <img class="mySlides" src="Pandemic index 2020.05.10.png" style="width:1161px">
+          <div class="content">
+              <h3>2020.05.09.</h3>
+            <!--<p>Folyó naplementekor</p>-->
+          </div>
         </div>
         <button class="sidebutton" onclick="plusDivs(1)">
             <img id="rightarrow" src="arrow.svg" alt="">
