--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="grad">
-    <h1 class="title">COVID-19 pandemic index from 24.03.2020/ járvány index 2020.03.24-től</h1>
+    <h1 class="title">COVID-19 active cases from 06.05.2020/ aktív esetek 2020.05.06-tól</h1>
     <div class="whole">
         <!-- <img id="leftarrow" src="/My first web application/images/arrow.svg" alt="">-->
         <button class="sidebutton" onclick="plusDivs(-1)">
