--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -14,46 +14,53 @@
             <img id="leftarrow" src="arrow.svg" alt="">
         </button>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.11.png" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.12.svg" style="width:1161px">
             <div class="content">
-              <h3>2020.05.11.</h3>
+              <h3>2020.05.12.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.06.png" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.06.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.06.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.07.png" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.07.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.07.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.08.png" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.08.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.08.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.09.png" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.09.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.09.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.05.10.png" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.05.10.svg" style="width:1161px">
           <div class="content">
               <h3>2020.05.10.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Active cases new cases 2020.05.11.svg" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.11.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
         </div>
         <button class="sidebutton" onclick="plusDivs(1)">
             <img id="rightarrow" src="arrow.svg" alt="">
