--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -14,9 +14,9 @@
             <img id="leftarrow" src="arrow.svg" alt="">
         </button>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.12.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.13.svg" style="width:1161px">
             <div class="content">
-              <h3>2020.05.12.</h3>
+              <h3>2020.05.13.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
@@ -59,6 +59,13 @@
             <img class="mySlides" src="Active cases new cases 2020.05.11.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.11.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Active cases new cases 2020.05.12.svg" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.12.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
