--- a/covid19/pandemicindex/index.html
+++ b/covid19/pandemicindex/index.html
@@ -14,9 +14,9 @@
             <img id="leftarrow" src="arrow.svg" alt="">
         </button>
         <div id="div4" class="container">
-            <img class="mySlides" src="Pandemic index 2020.05.12.png" style="width:1161px">
+            <img class="mySlides" src="Pandemic index 2020.05.13.png" style="width:1161px">
             <div class="content">
-              <h3>2020.05.12.</h3>
+              <h3>2020.05.13.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
@@ -360,6 +360,13 @@
           <img class="mySlides" src="Pandemic index 2020.05.11.png" style="width:1161px">
           <div class="content">
             <h3>2020.05.11.</h3>
+            <!--<p>Folyó naplementekor</p>-->
+          </div>
+        </div>
+        <div id="div4" class="container">
+          <img class="mySlides" src="Pandemic index 2020.05.12.png" style="width:1161px">
+          <div class="content">
+            <h3>2020.05.12.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
