--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="grad">
+    <button class="button" onclick="window.location.href = 'https://gydeak.github.io/covid19';">Home</button>
     <h1 class="title">COVID-19 active cases from 06.05.2020/ aktív esetek 2020.05.06-tól</h1>
     <div class="whole">
         <!-- <img id="leftarrow" src="/My first web application/images/arrow.svg" alt="">-->
