--- a/covid19/pandemicindex/index.html
+++ b/covid19/pandemicindex/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="grad">
+    <button class="button" onclick="window.location.href = 'https://gydeak.github.io/covid19';">Home</button>
     <h1 class="title">COVID-19 pandemic index from 24.03.2020/ járvány index 2020.03.24-től</h1>
     <div class="whole">
         <!-- <img id="leftarrow" src="/My first web application/images/arrow.svg" alt="">-->
