--- a/covid19/index.html
+++ b/covid19/index.html
@@ -7,13 +7,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body id="grad">
-  <h1 class="title">COVID-19 Statistics/ COVID-19 Statisztikák</h1>
+  <h1 class="title">COVID-19 Statistics / COVID-19 Statisztikák</h1>
   <div class="container">
     <div class="link">
-      <a href="https://gydeak.github.io/covid19/pandemicindex">Pandemic Index</a>
+      <a href="https://gydeak.github.io/covid19/pandemicindex">Pandemic Index / Járvány index</a>
+      <div class="thumbnail">
+        <img src="Pandemic index 2020.05.14.svg" alt="" width="400px">
+      </div>
     </div>
     <div class="link">
-      <a href="https://gydeak.github.io/covid19/activecases">Active Cases</a>
+      <a href="https://gydeak.github.io/covid19/activecases">Active Cases / Aktív esetek</a>
+      <div class="thumbnail">
+        <img src="Active cases new cases 2020.05.14.svg" alt="" width="400px">
+      </div>
     </div>
   </div>
 </body>
