--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -15,9 +15,9 @@
             <img id="leftarrow" src="arrow.svg" alt="">
         </button>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.14.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.18.svg" style="width:1161px">
             <div class="content">
-              <h3>2020.05.14.</h3>
+              <h3>2020.05.18.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
@@ -74,6 +74,34 @@
             <img class="mySlides" src="Active cases new cases 2020.05.13.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.13.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Active cases new cases 2020.05.14.svg" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.14.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Active cases new cases 2020.05.15.svg" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.15.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Active cases new cases 2020.05.16.svg" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.16.</h3>
+              <!--<p>Folyó naplementekor</p>-->
+            </div>
+        </div>
+        <div id="div4" class="container">
+            <img class="mySlides" src="Active cases new cases 2020.05.17.svg" style="width:1161px">
+            <div class="content">
+                <h3>2020.05.17.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
