--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -15,9 +15,9 @@
             <img id="leftarrow" src="arrow.svg" alt="">
         </button>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.18.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.19.svg" style="width:1161px">
             <div class="content">
-              <h3>2020.05.18.</h3>
+              <h3>2020.05.19.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
@@ -105,6 +105,13 @@
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
+        <div id="div4" class="container">
+          <img class="mySlides" src="Active cases new cases 2020.05.18.svg" style="width:1161px">
+          <div class="content">
+              <h3>2020.05.18.</h3>
+            <!--<p>Folyó naplementekor</p>-->
+          </div>
+      </div>
         <button class="sidebutton" onclick="plusDivs(1)">
             <img id="rightarrow" src="arrow.svg" alt="">
         </button>
