--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -15,9 +15,9 @@
             <img id="leftarrow" src="arrow.svg" alt="">
         </button>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.21.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.24.svg" style="width:1161px">
             <div class="content">
-              <h3>2020.05.21.</h3>
+              <h3>2020.05.24.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
@@ -123,6 +123,27 @@
           <img class="mySlides" src="Active cases new cases 2020.05.20.svg" style="width:1161px">
           <div class="content">
             <h3>2020.05.20.</h3>
+            <!--<p>Folyó naplementekor</p>-->
+          </div>
+        </div>
+        <div id="div4" class="container">
+          <img class="mySlides" src="Active cases new cases 2020.05.21.svg" style="width:1161px">
+          <div class="content">
+            <h3>2020.05.21.</h3>
+            <!--<p>Folyó naplementekor</p>-->
+          </div>
+        </div>
+        <div id="div4" class="container">
+          <img class="mySlides" src="Active cases new cases 2020.05.22.svg" style="width:1161px">
+          <div class="content">
+            <h3>2020.05.22.</h3>
+            <!--<p>Folyó naplementekor</p>-->
+          </div>
+        </div>
+        <div id="div4" class="container">
+          <img class="mySlides" src="Active cases new cases 2020.05.23.svg" style="width:1161px">
+          <div class="content">
+            <h3>2020.05.23.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
