--- a/covid19/pandemicindex/index.html
+++ b/covid19/pandemicindex/index.html
@@ -15,9 +15,9 @@
             <img id="leftarrow" src="arrow.svg" alt="">
         </button>
         <div id="div4" class="container">
-            <img class="mySlides" src="Pandemic index 2020.06.02.svg" style="width:1161px">
+            <img class="mySlides" src="Pandemic index 2020.06.03.svg" style="width:1161px">
             <div class="content">
-              <h3>2020.06.02.</h3>
+              <h3>2020.06.03.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
@@ -508,6 +508,13 @@
           <img class="mySlides" src="Pandemic index 2020.06.01.svg" style="width:1161px">
           <div class="content">
             <h3>2020.06.01.</h3>
+            <!--<p>Folyó naplementekor</p>-->
+          </div>
+        </div>
+        <div id="div4" class="container">
+          <img class="mySlides" src="Pandemic index 2020.06.02.svg" style="width:1161px">
+          <div class="content">
+            <h3>2020.06.02.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
