--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -15,198 +15,205 @@
             <img id="leftarrow" src="arrow.svg" alt="">
         </button>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.06.03.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.06.04_16-9.svg" style="width:1161px">
             <div class="content">
-              <h3>2020.06.03.</h3>
+              <h3>2020.06.04.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.06.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.06_16-9.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.06.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.07.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.07_16-9.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.07.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.08.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.08_16-9.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.08.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.09.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.09_16-9.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.09.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.05.10.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.05.10_16-9.svg" style="width:1161px">
           <div class="content">
               <h3>2020.05.10.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.11.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.11_16-9.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.11.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.12.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.12_16-9.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.12.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.13.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.13_16-9.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.13.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.14.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.14_16-9.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.14.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.15.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.15_16-9.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.15.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.16.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.16_16-9.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.16.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.05.17.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.05.17_16-9.svg" style="width:1161px">
             <div class="content">
                 <h3>2020.05.17.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.05.18.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.05.18_16-9.svg" style="width:1161px">
           <div class="content">
               <h3>2020.05.18.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.05.19.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.05.19_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.05.19.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.05.20.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.05.20_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.05.20.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.05.21.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.05.21_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.05.21.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.05.22.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.05.22_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.05.22.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.05.23.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.05.23_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.05.23.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.05.24.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.05.24_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.05.24.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.05.25.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.05.25_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.05.25.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.05.26.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.05.26_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.05.26.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.05.27.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.05.27_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.05.27.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.05.28.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.05.28_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.05.28.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.05.29.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.05.29_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.05.29.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.05.30.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.05.30_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.05.30.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.06.01.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.06.01_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.06.01.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
         <div id="div4" class="container">
-          <img class="mySlides" src="Active cases new cases 2020.06.02.svg" style="width:1161px">
+          <img class="mySlides" src="Active cases new cases 2020.06.02_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.06.02.</h3>
+            <!--<p>Folyó naplementekor</p>-->
+          </div>
+        </div>
+        <div id="div4" class="container">
+          <img class="mySlides" src="Active cases new cases 2020.06.03_16-9.svg" style="width:1161px">
+          <div class="content">
+            <h3>2020.06.03.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
