--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -197,6 +197,13 @@
           </div>
         </div>
         <div id="div4" class="container">
+          <img class="mySlides" src="Active cases new cases 2020.05.31_16-9.svg" style="width:1161px">
+          <div class="content">
+            <h3>2020.05.31.</h3>
+            <!--<p>Folyó naplementekor</p>-->
+          </div>
+        </div>
+        <div id="div4" class="container">
           <img class="mySlides" src="Active cases new cases 2020.06.01_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.06.01.</h3>
