--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -15,9 +15,9 @@
             <img id="leftarrow" src="arrow.svg" alt="">
         </button>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.06.18_16-9.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.06.22_16-9.svg" style="width:1161px">
             <div class="content">
-              <h3>2020.06.18.</h3>
+              <h3>2020.06.22.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
@@ -319,6 +319,34 @@
           <img class="mySlides" src="Active cases new cases 2020.06.17_16-9.svg" style="width:1161px">
           <div class="content">
             <h3>2020.06.17.</h3>
+            <!--<p>Folyó naplementekor</p>-->
+          </div>
+        </div>
+        <div id="div4" class="container">
+          <img class="mySlides" src="Active cases new cases 2020.06.18_16-9.svg" style="width:1161px">
+          <div class="content">
+            <h3>2020.06.18.</h3>
+            <!--<p>Folyó naplementekor</p>-->
+          </div>
+        </div>
+        <div id="div4" class="container">
+          <img class="mySlides" src="Active cases new cases 2020.06.19_16-9.svg" style="width:1161px">
+          <div class="content">
+            <h3>2020.06.19.</h3>
+            <!--<p>Folyó naplementekor</p>-->
+          </div>
+        </div>
+        <div id="div4" class="container">
+          <img class="mySlides" src="Active cases new cases 2020.06.20_16-9.svg" style="width:1161px">
+          <div class="content">
+            <h3>2020.06.20.</h3>
+            <!--<p>Folyó naplementekor</p>-->
+          </div>
+        </div>
+        <div id="div4" class="container">
+          <img class="mySlides" src="Active cases new cases 2020.06.21_16-9.svg" style="width:1161px">
+          <div class="content">
+            <h3>2020.06.21.</h3>
             <!--<p>Folyó naplementekor</p>-->
           </div>
         </div>
