--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -15,9 +15,9 @@
             <img id="leftarrow" src="arrow.svg" alt="">
         </button>
         <div id="div4" class="container">
-            <img class="mySlides" src="Active cases new cases 2020.06.28_16-9.svg" style="width:1161px">
+            <img class="mySlides" src="Active cases new cases 2020.06.29_16-9.svg" style="width:1161px">
             <div class="content">
-              <h3>2020.06.28.</h3>
+              <h3>2020.06.29.</h3>
               <!--<p>Folyó naplementekor</p>-->
             </div>
         </div>
@@ -390,6 +390,13 @@
         <img class="mySlides" src="Active cases new cases 2020.06.27_16-9.svg" style="width:1161px">
         <div class="content">
           <h3>2020.06.27.</h3>
+          <!--<p>Folyó naplementekor</p>-->
+        </div>
+      </div>
+      <div id="div4" class="container">
+        <img class="mySlides" src="Active cases new cases 2020.06.28_16-9.svg" style="width:1161px">
+        <div class="content">
+          <h3>2020.06.28.</h3>
           <!--<p>Folyó naplementekor</p>-->
         </div>
       </div>
