--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -17,9 +17,9 @@
       <img id="leftarrow" src="arrow.svg" alt="">
     </button>
     <div id="div4" class="container">
-      <img class="mySlides" src="Active cases new cases 2020.07.15_16-9.svg" style="width:1161px">
+      <img class="mySlides" src="Active cases new cases 2020.07.16_16-9.svg" style="width:1161px">
       <div class="content">
-        <h3>2020.07.15.</h3>
+        <h3>2020.07.16.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
@@ -510,6 +510,13 @@
       <img class="mySlides" src="Active cases new cases 2020.07.14_16-9.svg" style="width:1161px">
       <div class="content">
         <h3>2020.07.14.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2020.07.15_16-9.svg" style="width:1161px">
+      <div class="content">
+        <h3>2020.07.15.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
