--- a/covid19/pandemicindex/index.html
+++ b/covid19/pandemicindex/index.html
@@ -918,6 +918,13 @@
           </div>
         </div>
         <div id="div4" class="container">
+          <img class="mySlides" src="Pandemic index 2020.07.30.svg" style="width:1161px">
+          <div class="content">
+            <h3>2020.07.30.</h3>
+            <!--<p>Folyó naplementekor</p>-->
+          </div>
+        </div>
+        <div id="div4" class="container">
           <img class="mySlides" src="Pandemic index 2020.07.31.svg" style="width:1161px">
           <div class="content">
             <h3>2020.07.31.</h3>
