--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -619,6 +619,13 @@
       </div>
     </div>
     <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2020.07.30_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2020.07.30.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
       <img class="mySlides" src="Active cases new cases 2020.07.31_16-9_colored.svg" style="width:1161px">
       <div class="content">
         <h3>2020.07.31.</h3>
