--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -17,9 +17,9 @@
       <img id="leftarrow" src="arrow.svg" alt="">
     </button>
     <div id="div4" class="container">
-      <img class="mySlides" src="Active cases new cases 2020.09.05_16-9_colored.svg" style="width:1161px">
+      <img class="mySlides" src="Active cases new cases 2020.09.06_16-9_colored.svg" style="width:1161px">
       <div class="content">
-        <h3>2020.09.05.</h3>
+        <h3>2020.09.06.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
@@ -874,6 +874,13 @@
       <img class="mySlides" src="Active cases new cases 2020.09.04_16-9_colored.svg" style="width:1161px">
       <div class="content">
         <h3>2020.09.04.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2020.09.05_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2020.09.05.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
