--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -17,9 +17,9 @@
       <img id="leftarrow" src="arrow.svg" alt="">
     </button>
     <div id="div4" class="container">
-      <img class="mySlides" src="Active cases new cases 2020.09.18_16-9_colored.svg" style="width:1161px">
+      <img class="mySlides" src="Active cases new cases 2020.09.19_16-9_colored.svg" style="width:1161px">
       <div class="content">
-        <h3>2020.09.18.</h3>
+        <h3>2020.09.19.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
@@ -962,9 +962,16 @@
       </div>
     </div>
     <div id="div4" class="container">
-      <img class="mySlides" src="Active cases new cases 2020.09.16_16-9_colored.svg" style="width:1161px">
+      <img class="mySlides" src="Active cases new cases 2020.09.17_16-9_colored.svg" style="width:1161px">
       <div class="content">
-        <h3>2020.09.16.</h3>
+        <h3>2020.09.17.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2020.09.18_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2020.09.18.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
