--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -1107,7 +1107,7 @@
         </div>
     </div>-->
   <iframe
-    src="https://ourworldindata.org/coronavirus-data-explorer?zoomToSelection=true&minPopulationFilter=1000000&time=2020-09-14..latest&country=AUT~BEL~BGR~BLR~BIH~CHE~CYP~CZE~DEU~DNK~EST~FIN~ESP~FRA~GBR~GRC~HRV~HUN~IRL~ITA~LVA~MDA~MKD~NLD~NOR~POL~ROU~RUS~SRB~SVK~SVN~SWE~UKR~OWID_KOS&region=World&deathsMetric=true&interval=smoothed&perCapita=true&smoothing=7&pickerMetric=location&pickerSort=asc"
+    src="https://ourworldindata.org/coronavirus-data-explorer?zoomToSelection=true&minPopulationFilter=1000000&time=2020-09-23..latest&country=AUT~BEL~BGR~BLR~BIH~CHE~CYP~CZE~DEU~DNK~EST~FIN~ESP~FRA~GBR~GRC~HRV~HUN~IRL~ISL~ITA~LVA~MDA~MKD~NLD~NOR~POL~ROU~RUS~SRB~SVK~SVN~SWE~UKR~OWID_KOS&region=World&deathsMetric=true&interval=smoothed&perCapita=true&smoothing=7&pickerMetric=location&pickerSort=asc"
     loading="lazy" style="width: 100%; height: 900px; border: 0px none;"></iframe>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="scripts.js"></script>
