--- a/covid19/pandemicindex/index.html
+++ b/covid19/pandemicindex/index.html
@@ -1454,6 +1454,7 @@
             <button id="button4" onclick="showDivs(-2)"><img id="img4" class="mySlides2" src="Wereldinbeeld (3).jpg"></button>
         </div>
     </div>-->
+    <iframe src="https://ourworldindata.org/grapher/excess-mortality-p-scores?tab=chart&stackMode=absolute&time=2020-05-31..latest&country=AUT~BEL~BGR~BLR~BIH~CHE~CYP~CZE~DEU~DNK~EST~FIN~ESP~FRA~GBR~GRC~HRV~HUN~IRL~ISL~ISR~ITA~LVA~MDA~MKD~NLD~NOR~POL~ROU~RUS~SRB~SVK~SVN~SWE~UKR~USA&region=World" loading="lazy" style="width: 100%; height: 1000px; border: 0px none;"></iframe>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="scripts.js"></script>
 </body>
