--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -17,9 +17,9 @@
       <img id="leftarrow" src="arrow.svg" alt="">
     </button>
     <div id="div4" class="container">
-      <img class="mySlides" src="Active cases new cases 2020.10.19_16-9_colored.svg" style="width:1161px">
+      <img class="mySlides" src="Active cases new cases 2020.10.20_16-9_colored.svg" style="width:1161px">
       <div class="content">
-        <h3>2020.10.19.</h3>
+        <h3>2020.10.20.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
@@ -1185,6 +1185,13 @@
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2020.10.19_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2020.10.19.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
     <button class="sidebutton" onclick="plusDivs(1)">
       <img id="rightarrow" src="arrow.svg" alt="">
     </button>
@@ -1204,7 +1211,7 @@
             <button id="button4" onclick="showDivs(-2)"><img id="img4" class="mySlides2" src="Wereldinbeeld (3).jpg"></button>
         </div>
     </div>-->
-    <iframe src="https://ourworldindata.org/coronavirus-data-explorer?zoomToSelection=true&minPopulationFilter=1000000&time=2020-10-07..latest&country=AUT~BEL~BGR~BLR~BIH~CHE~CYP~CZE~DEU~DNK~EST~FIN~ESP~FRA~GBR~GRC~HRV~HUN~IRL~ISL~ISR~ITA~JPN~KOR~KOS~LVA~MDA~MKD~NLD~NOR~POL~ROU~RUS~SRB~SVK~SVN~SWE~UKR~USA~AZE~GEO~PRT~TUR~ARM~CHN~LTU~LUX~ALB~MLT~MNE&region=World&deathsMetric=true&interval=smoothed&perCapita=true&smoothing=7&pickerMetric=location&pickerSort=asc" loading="lazy" style="width: 100%; height: 1000px; border: 0px none;"></iframe>
+    <iframe src="https://ourworldindata.org/coronavirus-data-explorer?zoomToSelection=true&minPopulationFilter=1000000&time=2020-10-08..latest&country=AUT~BEL~BGR~BLR~BIH~CHE~CYP~CZE~DEU~DNK~EST~FIN~ESP~FRA~GBR~GRC~HRV~HUN~IRL~ISL~ISR~ITA~JPN~KOR~KOS~LVA~MDA~MKD~NLD~NOR~POL~ROU~RUS~SRB~SVK~SVN~SWE~UKR~USA~AZE~GEO~PRT~TUR~ARM~CHN~LTU~LUX~ALB~MLT~MNE&region=World&deathsMetric=true&interval=smoothed&perCapita=true&smoothing=7&pickerMetric=location&pickerSort=asc" loading="lazy" style="width: 100%; height: 1000px; border: 0px none;"></iframe>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="scripts.js"></script>
 </body>
